Volume Object Data Render Step Size cannot be reset back to 0 once changed. #74908

Closed
opened 2020-03-19 06:13:31 +01:00 by Evan Wilson · 7 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-18 23:24, hash: 271231f58e
Worked: Never, it was added in 7537cad576

Short description of error
If the Step Size setting in the Render sub panel of the Volume Object Data tab is changed from it's default of 0, it cannot be changed back to 0

Exact steps for others to reproduce the error

  • Start with the default scene.
  • Switch the render engine to Cycles.
  • Add a Volume object (even an empty one will do.)
  • Change the Step Size setting in the Render sub panel of the Volume Object Data tab to anything other than the default of 0.

Now try to change it back to 0

In the file below I have already done the first 4 steps for you.

step_size_bug.blend

In rna_gen_volume.c, I believe it is line 1070 where the minimum value is set to 0.0010000000f or 0.0000100000f based upon my experimenting.

	{(PropertyRNA *)&rna_VolumeRender_clipping, (PropertyRNA *)&rna_VolumeRender_space,
	- 1, "step_size", 1, 0, 0, 4, 0, "Step Size",
	"Distance between volume samples. Higher values render more detail at the cost of performance. If set to zero, the step size is automatically determined based on voxel size",
	0, "*",
	PROP_FLOAT, PROP_DISTANCE | PROP_UNIT_LENGTH, NULL, 0, {0, 0, 0}, 0,
	rna_Volume_update_display, 0, NULL, NULL, rna_property_override_diff_default, rna_property_override_store_default, rna_property_override_apply_default,
	offsetof(VolumeRender, step_size), 5, NULL},
	VolumeRender_step_size_get, VolumeRender_step_size_set, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, 0.0010000000f, 100.0f, 0.0000100000f, FLT_MAX, 1.0f, 3, 0.0f, NULL
};
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-18 23:24, hash: `271231f58e` Worked: Never, it was added in 7537cad5761e **Short description of error** If the Step Size setting in the Render sub panel of the Volume Object Data tab is changed from it's default of `0`, it cannot be changed back to `0` **Exact steps for others to reproduce the error** - Start with the default scene. - Switch the render engine to Cycles. - Add a Volume object (even an empty one will do.) - Change the Step Size setting in the Render sub panel of the Volume Object Data tab to anything other than the default of `0`. # Now try to change it back to `0` In the file below I have already done the first 4 steps for you. [step_size_bug.blend](https://archive.blender.org/developer/F8415094/step_size_bug.blend) In rna_gen_volume.c, I believe it is line 1070 where the minimum value is set to `0.0010000000f` or `0.0000100000f` based upon my experimenting. ```FloatPropertyRNA rna_VolumeRender_step_size = { {(PropertyRNA *)&rna_VolumeRender_clipping, (PropertyRNA *)&rna_VolumeRender_space, - 1, "step_size", 1, 0, 0, 4, 0, "Step Size", "Distance between volume samples. Higher values render more detail at the cost of performance. If set to zero, the step size is automatically determined based on voxel size", 0, "*", PROP_FLOAT, PROP_DISTANCE | PROP_UNIT_LENGTH, NULL, 0, {0, 0, 0}, 0, rna_Volume_update_display, 0, NULL, NULL, rna_property_override_diff_default, rna_property_override_store_default, rna_property_override_apply_default, offsetof(VolumeRender, step_size), 5, NULL}, VolumeRender_step_size_get, VolumeRender_step_size_set, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, 0.0010000000f, 100.0f, 0.0000100000f, FLT_MAX, 1.0f, 3, 0.0f, NULL }; ```
Author
Member

Added subscriber: @EAW

Added subscriber: @EAW

#75059 was marked as duplicate of this issue

#75059 was marked as duplicate of this issue
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 89b0465136

This issue was referenced by 89b046513661c40385e022fd71981900c481377b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-03-19 16:35:52 +01:00

Added subscriber: @matthieubarbie

Added subscriber: @matthieubarbie
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74908
No description provided.