Fix T74908: volume object step size can not be set back to zero